--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/ffmpeg-kit-react-native": "^6.0.0",
+    "@expo/metro-config": "^0.10.7",
     "expo": "~49.0.13",
+    "expo-asset": "~8.10.1",
+    "expo-av": "~13.4.1",
+    "expo-build-properties": "^0.8.3",
+    "expo-camera": "~13.4.4",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "ffmpeg-kit-react-native": "^6.0.2",
     "react": "18.2.0",
     "react-native": "0.72.5"
   },
